--- a/_posts/2017-10-9-Java字符串面试问题和答案.md
+++ b/_posts/2017-10-9-Java字符串面试问题和答案.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Java字符串面试问题和答案
-categories: java
+categories: Java
 tags:  java面试 
 author: Marnner
 excerpt: Java字符串面试问题和答案
