--- a/_posts/2018-4-2-2018年三月面试之路.md
+++ b/_posts/2018-4-2-2018年三月面试之路.md
@@ -26,9 +26,9 @@ grammar_cjkRuby: true
 
 ### 投简历之路
 
-离职之后，我就开始 闲起来了，有了足够时间来学习准备面试和投简历。于是我就一边复习面试，一边投简历。我主要通过拉钩和BOSS以及实习僧来投简历。但是效果并不理想，在最开始的一个礼拜，我在拉构上够了很多自己挺想去的公司，但是现实很残酷，全都是不合适，没有一个公司愿意给我面试机会，Boss和实习僧上也是。这让我很着急，之后我开始撒网式投简历，只要是符合的都去投，结果还是不好，两个星期过去了，我没有得到一场面试机会。
+离职之后，我就开始 闲起来了，有了足够时间来学习准备面试和投简历。于是我就一边复习面试，一边投简历。我主要通过拉钩和BOSS以及实习僧来投简历。但是效果并不理想，在最开始的一个礼拜，我在拉构上投了很多自己挺想去的公司，但是现实很残酷，全都是不合适，没有一个公司愿意给我面试机会，Boss和实习僧上也是。这让我很着急，之后我开始撒网式投简历，只要是符合的都去投，结果还是不好，两个星期过去了，我没有得到一场面试机会。
 
-现在想想，这两个礼拜有点浪费，应该好好补一补基础的，都放在挑选公司，投简历上了，自己也没有很用功，值得批评。在3月17号，我和同学一起去了浙江工业大学的校招，这是一次很好的机会，因为校招有非常多的公司，而且得到面试的机会很大。就这样我经过挑选，投了45家公司，有校宝在线，老板电器，杭州融先科技和中国联通以及其他的一些公司，最终只有融先科技和老板电器邀请我去面试。不过总比没有好。
+现在想想，这两个礼拜有点浪费，应该好好补一补基础的，都放在挑选公司，投简历上了，自己也没有很用功，值得批评。在3月17号，我和同学一起去了浙江工业大学的校招，这是一次很好的机会，因为校招有非常多的公司，而且得到面试的机会很大。就这样我经过挑选，投了几家公司，有校宝在线，老板电器，杭州融先科技和中国联通以及其他的一些公司，最终只有融先科技和老板电器邀请我去面试。不过总比没有好。
 
 
 
