--- a/_posts/2020-3-15-关于游戏的思考.md
+++ b/_posts/2020-3-15-关于游戏的思考.md
@@ -16,7 +16,7 @@ grammar_cjkRuby: true
 
 游戏是有成瘾性的东西，作为从小游戏玩到大的我来说，今天感慨万千。
 
-### 小学玩游戏厅玩游戏
+### 小学在游戏厅玩游戏
 
 从小学开始，我就开始玩游戏，那时候去游戏厅大三国战纪，拳皇，每天拿着1块钱去买两个币，打完了就看别人打，那时候的时光基本上都是耗费在游戏厅中。
 
