--- a/_posts/2020-3-15-怎么利用工作之余的时间.md
+++ b/_posts/2020-3-15-怎么利用工作之余的时间.md
@@ -29,7 +29,7 @@ grammar_cjkRuby: true
 ## 做些什么来提高自己
 
 - 定期反省自己，那些做的好，那些做的不好。
-- 练习写作，通过写博客来提高自己的写作能力，尽可能的多产出，一周至少一篇文章，慢慢像有思考和高质量的文章来靠近。
+- 练习写作，通过写博客来提高自己的写作能力，尽可能的多产出，一周至少一篇文章，慢慢向有思考和高质量的文章来靠近。
 - 学习技术，每天都要能打打代码保持好手感。
 
 ## 总结
